# twsfwphysx

./: .clang-format  .clang-tidy  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.EXAMPLE  HACKING.md  README.md  twsfwphysx_world_state.fbs
.github/: dependabot.yml
.github/workflows/: build_python_binding_docs.yml  coverage.yml  create_release.yml  deploy_docs.yml  validate.yml  validate_python_binding.yml  validate_wasm_binding.yml
cmake/: docs.cmake
include/twsfwphysx/: twsfwphysx.h
python-binding/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
python-binding/docs/: conf.py  index.rst
python-binding/tests/: import_test.py  test_engine.py  version_test.py
python-binding/twsfwphysx/: .gitignore  __init__.py  binding.c  binding.pyx
test/: CMakeLists.txt
test/source/: agent_rotate_tests.c  agent_turn_tests.c  assert_test.c  collision_tests.c  launch_missile_tests.c  missile_batch_reset_tests.c  missile_hit_tests.c  no_agents_tests.c  propagation_tests.c  twsfwphysx_fuzz_target.cpp  twsfwphysx_impl.c  twsfwphysx_test.c  twsfwphysx_unit_tests.cpp  twsfwphysx_version_test.c  utils.c  utils.h
wasm-binding/: .gitignore  Makefile  README.md  binding.cpp  run_all_tests  twsfwphysx.wasm
wasm-binding/source/: tests.cxx
