[build-system]
requires = ["setuptools", "wheel", "Cython", "GitPython"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
exclude = ["versioneer.py", "twsfw/_version.py"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "D",    # pydocstyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
]
ignore = [
    "E501",   # Line too long
    "UP015",  # unecessary open mode parameters
]

[tool.ruff.lint.per-file-ignores]
"setup.py" = ["D"]
"docs/conf.py" = ["D"]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
